# python-sqlparams

./: .gitignore  CHANGES.rst  MANIFEST  MANIFEST.in  Makefile  README-dist.rst  README.rst  README.rst.in  TODO.rst  git-commit.sh  github-upload.sh  prebuild.py  pyproject.toml  setup.cfg  setup.py  sqlparams_meta.py  tox.ini
dev/: Makefile
doc/: Makefile  requirements.txt
doc/source/: conf.py  global.rst  index.rst  sqlparams.rst
sqlparams/: __init__.py  _converting.py  _meta.py  _styles.py  _util.py  compat.py  typing.py
sqlparams.egg-info/: PKG-INFO  SOURCES.txt
test/: __init__.py
tests/: t_1_general.py  t_2_named_to_named.py  t_2_named_to_numeric.py  t_2_named_to_ordinal.py  t_2_numeric_to_named.py  t_2_numeric_to_numeric.py  t_2_numeric_to_ordinal.py  t_2_ordinal_to_named.py  t_2_ordinal_to_numeric.py  t_2_ordinal_to_ordinal.py  test_1_general.py  test_2_named_to_named.py  test_2_named_to_numeric.py  test_2_named_to_ordinal.py  test_2_numeric_to_named.py  test_2_numeric_to_numeric.py  test_2_numeric_to_ordinal.py  test_2_ordinal_to_named.py  test_2_ordinal_to_numeric.py  test_2_ordinal_to_ordinal.py
