[metadata]
author = Caleb P. Burns
author_email = cpburnz@gmail.com
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Database
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Utilities
description = Convert between various DB API 2.0 parameter styles.
license = MIT License
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
name = sqlparams
version: attr: sqlparams_meta.__version__
url = https://github.com/cpburnz/python-sql-parameters.git

[options]
packages = sqlparams
python_requires = >=3.5
setup_requires = setuptools >=39.2.0
